[project]
name = "jetbot-diffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "albumentations>=2.0.8",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.2",
    "raylib>=5.5.0.4",
    "torch>=2.11.0",
    "torchsummary>=1.5.1",
    "torchvision>=0.26.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
